--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ JWT_SECRET=2e22ewd
 PORT=5000
 RESEND_API_KEY=re_SRVfv4TF_NV27uCztF5hquhDQpUgbe38F
 CLIENT_URL=http://localhost:3000
+
+GEMINI_API_KEY=AIzaSyAj15XI7h97dinskxV2D_EdeiyWzwgGwnk
