--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "dist/server.js",
-  "scripts": {
-    "start": "node dist/server.js",
-    "dev": "nodemon --exec ts-node src/server.ts",
-    "build": "tsc"
-  },
+"scripts": {
+  "build": "npx tsc",
+  "start": "node dist/server.js",
+  "dev": "nodemon --exec ts-node src/server.ts"
+},
+
   "keywords": [],
   "author": "",
   "license": "ISC",
