--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "dist/server.js",
+ 
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "vercel-build": "npx tsc"
   },
   "keywords": [],
   "author": "",
@@ -35,3 +37,6 @@
     "typescript": "^5.8.3"
   }
 }
+
+
+
