--- a/package.json
+++ b/package.json
@@ -2,14 +2,11 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "dist/server.js",
- 
- 
   "scripts": {
     "build": "npx tsc",
     "start": "node dist/server.js",
     "dev": "nodemon --exec ts-node src/server.ts"
   },
-
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -24,7 +21,8 @@
     "mongoose": "^8.16.4",
     "nodemailer": "^7.0.5",
     "razorpay": "^2.9.6",
-    "resend": "^4.7.0"
+    "resend": "^4.7.0",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -34,10 +32,6 @@
     "@types/node": "^24.0.14",
     "@types/nodemailer": "^6.4.17",
     "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "ts-node": "^10.9.2"
   }
 }
-
-
-
