--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "version": 2,
-  "buildCommand": "npm install && npx tsc",
+  "buildCommand": "npm install && ./node_modules/.bin/tsc || tsc",
   "builds": [
     {
       "src": "src/server.ts",
