--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,15 @@
 {
   "version": 2,
-  "buildCommand": "npm install && ./node_modules/.bin/tsc || tsc",
   "builds": [
     {
-      "src": "src/server.ts",
+      "src": "dist/server.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "src/server.ts"
+      "dest": "dist/server.js"
     }
   ]
 }
